--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
 	<groupId>com.jkr</groupId>
 	<artifactId>jee7webapp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 
 	<name>jee7webapp</name>
 
 	<properties>
 		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-		<jetty.version>9.4.12.v20180830</jetty.version>
+		<jetty.version>9.4.19.v20190610</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -23,11 +23,6 @@
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.prometheus.jmx</groupId>
-			<artifactId>collector</artifactId>
-			<version>0.12.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
@@ -39,25 +34,14 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
 				<configuration>
-					<skip>false</skip>
-					<httpConnector>
-						<host>localhost</host>
-						<port>8080</port>
-					</httpConnector>
-					<reload>manual</reload>
 					<webApp>
-						<contextPath>/demo</contextPath>
-						<!--<webInfIncludeJarPattern>.*/webjars/.*\.jar$</webInfIncludeJarPattern> -->
-						<!--<containerIncludeJarPattern>^$</containerIncludeJarPattern> -->
-						<sessionHandler
-							implementation="org.eclipse.jetty.server.session.SessionHandler">
-							<sessionManager
-								implementation="org.eclipse.jetty.server.session.HashSessionManager">
-								<storeDirectory>${project.basedir}/target/jetty-sessions</storeDirectory>
-							</sessionManager>
-						</sessionHandler>
+						<_initParams>
+							<org.eclipse.jetty.servlet.Default.useFileMappedBuffer>false</org.eclipse.jetty.servlet.Default.useFileMappedBuffer>
+						</_initParams>
 					</webApp>
+					<scanIntervalSeconds>5</scanIntervalSeconds>
 				</configuration>
+
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
